# serializer version: 1
# name: test_cli_error_config
  'Vocab list received.'
# ---
# name: test_cli_error_config.1
  "Bad request: 400 Bad Request: The settings provided are not valid: 'number-of-questions' (InvalidSettingsError)"
# ---
# name: test_cli_error_list
  "Bad request: 400 Bad Request: InvalidVocabFileFormatError: Invalid part of speech: 'Cause an error'"
# ---
# name: test_cli_error_list.1
  'Bad request: 400 Bad Request: Vocab list has not been provided.'
# ---
# name: test_cli_list_badpos
  "Bad request: 400 Bad Request: Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)"
# ---
# name: test_cli_list_badpos.1
  'Bad request: 400 Bad Request: Vocab list has not been provided.'
# ---
# name: test_cli_list_badpos.2
  '''
  INFO     root:__main__.py:91 Using random seed '10'.
  INFO     waitress:wasyncore.py:449 Serving on http://127.0.0.1:5501
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  INFO     src.server.app:app.py:84 Reading vocab list.
  DEBUG    src.core.lego.reader:reader.py:212 Reading line '@ Cause an error'
  ERROR    src.server.app:app.py:46 Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /send-vocab HTTP/1.1" 400 100
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  ERROR    src.server.app:app.py:46 Vocab list has not been provided.
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /session HTTP/1.1" 400 63
  
  '''
# ---
# name: test_cli_normal
  'Vocab list received.'
# ---
# name: test_cli_normal.1
  list([
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'imperfect active subjunctive plural 1st person',
        ]),
        'dictionary_entry': 'take: capio, capere, cepi',
        'main_answer': 'imperfect active subjunctive plural 1st person',
        'prompt': 'caperemus',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'hear',
        'choices': list([
          'this',
          'hear',
          'large',
        ]),
        'prompt': 'audio',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'capio',
          'capere',
          'cepi',
        ]),
        'prompt': 'capio',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'say',
        'choices': list([
          'into',
          'take',
          'say',
        ]),
        'prompt': 'inquam',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative nominative singular masculine',
          'comparative nominative singular masculine',
          'comparative nominative singular masculine',
          'comparative nominative singular masculine',
        ]),
        'dictionary_entry': 'good: bonus, bona, bonum, (2-1-2)',
        'main_answer': 'comparative nominative singular masculine',
        'prompt': 'melior',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'accusative singular',
          'accusative singular',
        ]),
        'dictionary_entry': 'I: ego, (irregular)',
        'main_answer': 'accusative singular',
        'prompt': 'me',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'ingentior',
          'ingentiora',
          'ingentiore',
          'ingentiorem',
          'ingentiores',
          'ingentiori',
          'ingentioribus',
          'ingentioris',
          'ingentiorum',
          'ingentius',
        ]),
        'main_answer': 'ingentior',
        'prompt': 'larger',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'into',
        ]),
        'main_answer': 'into',
        'prompt': 'in',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'bonus',
        'choices': list([
          'audio',
          'nomen',
          'bonus',
        ]),
        'prompt': 'good',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingens',
          'ingentis',
        ]),
        'prompt': 'ingens',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'keen',
        ]),
        'main_answer': 'keen',
        'prompt': 'acria',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'puer',
          'levis',
          'e',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'nomen',
        'choices': list([
          'hic',
          'nomen',
          'capio',
        ]),
        'prompt': 'name',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'of that',
        ]),
        'main_answer': 'of that',
        'prompt': 'illius',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'bonus',
          'bona',
          'bonum',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'acer',
          'acris',
          'acre',
        ]),
        'prompt': 'acer',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'agricola',
        'choices': list([
          'puella',
          'e',
          'agricola',
        ]),
        'prompt': 'farmer',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative ablative singular masculine',
          'comparative ablative singular masculine',
          'comparative ablative singular masculine',
        ]),
        'dictionary_entry': 'keen: acer, acris, acre, (3-3)',
        'main_answer': 'comparative ablative singular masculine',
        'prompt': 'acriore',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'into',
        'choices': list([
          'boy',
          'farmer',
          'into',
        ]),
        'prompt': 'in',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'pueris',
        ]),
        'main_answer': 'pueris',
        'prompt': 'for the boys',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular',
          'dative singular',
        ]),
        'dictionary_entry': 'boy: puer, pueri, (m)',
        'main_answer': 'dative singular',
        'prompt': 'puero',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'positive dative singular masculine',
          'positive dative singular masculine',
          'positive dative singular masculine',
          'positive dative singular masculine',
          'positive dative singular masculine',
          'positive dative singular masculine',
        ]),
        'dictionary_entry': 'light: levis, leve, (3-2)',
        'main_answer': 'positive dative singular masculine',
        'prompt': 'levi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'audio',
          'audire',
          'audivi',
          'auditus',
        ]),
        'prompt': 'audio',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'ceperat',
        ]),
        'components': 'pluperfect active indicative singular 3rd person',
        'main_answer': 'ceperat',
        'prompt': 'take: capio, capere, cepi',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'nomen',
        'choices': list([
          'e',
          'nomen',
          'ingens',
        ]),
        'prompt': 'name',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'better',
          'more good',
        ]),
        'main_answer': 'better',
        'prompt': 'melioris',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'has',
        ]),
        'components': 'accusative plural feminine',
        'main_answer': 'has',
        'prompt': 'this: hic, haec, hoc',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'e',
          'puer',
          'hic',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'good',
        'choices': list([
          'happy',
          'good',
          'keen',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'happy',
        ]),
        'main_answer': 'happy',
        'prompt': 'laeto',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'inquam',
        'choices': list([
          'bonus',
          'puella',
          'inquam',
        ]),
        'prompt': 'say',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'into',
        ]),
        'main_answer': 'into',
        'prompt': 'in',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'into',
        ]),
        'main_answer': 'into',
        'prompt': 'in',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'leve',
          'levem',
          'leves',
          'levi',
          'levia',
          'levibus',
          'levis',
          'levium',
        ]),
        'main_answer': 'levis',
        'prompt': 'light',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'laetissimis',
        ]),
        'components': 'superlative ablative plural masculine',
        'main_answer': 'laetissimis',
        'prompt': 'happy: laetus, laeta, laetum, (2-1-2)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'hic',
          'haec',
          'hoc',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'agricolae',
        ]),
        'main_answer': 'agricolae',
        'prompt': 'of a farmer',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'cepi',
        ]),
        'main_answer': 'cepi',
        'prompt': 'I took',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'ingens',
          'e',
          'puella',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'ingens',
        'choices': list([
          'puella',
          'ingens',
          'capio',
        ]),
        'prompt': 'large',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'from',
        'choices': list([
          'dog',
          'from',
          'good',
        ]),
        'prompt': 'e',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative singular',
          'nominative singular',
          'nominative singular',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'nominative singular',
        'prompt': 'canis',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'puellae',
        ]),
        'main_answer': 'puellae',
        'prompt': 'to the girl',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'huic',
        ]),
        'main_answer': 'huic',
        'prompt': 'to this',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'that',
        'choices': list([
          'keen',
          'that',
          'girl',
        ]),
        'prompt': 'ille',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive plural',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'genitive plural',
        'prompt': 'canium',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'happier',
          'more happy',
        ]),
        'main_answer': 'happier',
        'prompt': 'laetior',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'he was saying',
          'it was saying',
          'she was saying',
        ]),
        'main_answer': 'he was saying',
        'prompt': 'inquiebat',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
  ])
# ---
